--- a/speedometer3.css
+++ b/speedometer3.css
@@ -56,3 +56,11 @@ body{
   position: relative;
   z-index: 10;
 }
+.circleAnimation {
+  animation: blink 1s ease-in-out infinite;
+}
+@keyframes blink {
+  0%{opacity: 1;}
+  50%{opacity: 0;}
+  100%{opacity: 1;}
+}
