--- a/speedometer3.css
+++ b/speedometer3.css
@@ -1,4 +1,7 @@
 body{
+  background-image: url('https://i.pinimg.com/originals/ef/7f/b1/ef7fb1b37078b6a2aef8e40710446bfa.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: 'Roboto', sans-serif;
 }
 .box{
