--- a/speedometer3.css
+++ b/speedometer3.css
@@ -50,7 +50,7 @@ body{
   width:100%;
   text-align:center;
   top: 100px;
-  background: orange;
+  background: red;
 }
 .fa-gas-pump{
   margin-left: 30px;
