--- a/speedometer3.css
+++ b/speedometer3.css
@@ -94,3 +94,15 @@ body{
   50%{opacity: 0;}
   100%{opacity: 1;}
 }
+/*
+.girAnimation{
+  animation: scale 500ms ease-in-out forwards;
+}
+@keyframes scale {
+  0%, 100%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.1);
+  }
+}
